--- a/first-pipeline/Jenkinsfile
+++ b/first-pipeline/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
   agent {
     docker { image 'node:16-alpine'}
   }
-  Stages {
+  stages {
     stage ('Test') {
       steps  {
         sh 'node --version'
